chandeliers-lus/tests/compile_fail/ui/causality/redef-var-vv.stderr
error: Attempt to redefine a, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-var-vv.rs:5:18
  |
5 |     var a : int; a : int;
  |                  ^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-vv.rs:5:9
  |
5 |     var a : int; a : int;
  |         ^
